--- a/clean_spm.ipynb
+++ b/clean_spm.ipynb
@@ -791,21 +791,6 @@
     "\n",
     "geojson_data = map.read_geojson_file(file._map_district)\n",
     "\n",
-    "def haversine(lat1, lon1, lat2, lon2):\n",
-    "    R = 6371.0 # Earth radius in kilometers\n",
-    "\n",
-    "    lat1_rad, lon1_rad = np.radians(lat1), np.radians(lon1)\n",
-    "    lat2_rad, lon2_rad = np.radians(lat2), np.radians(lon2)\n",
-    "\n",
-    "    dlat = lat2_rad - lat1_rad\n",
-    "    dlon = lon2_rad - lon1_rad\n",
-    "\n",
-    "    a = np.sin(dlat / 2)**2 + np.cos(lat1_rad) * np.cos(lat2_rad) * np.sin(dlon / 2)**2\n",
-    "    c = 2 * np.arctan2(np.sqrt(a), np.sqrt(1 - a))\n",
-    "\n",
-    "    distance = R * c\n",
-    "    return distance\n",
-    "\n",
     "population = pd.read_parquet(file._population_str_ascii_households).rename(columns={\"X\":'lon', \"Y\":\"lat\"})\n",
     "gp_df = pd.read_excel(file._gp_file)\n",
     "\n",
@@ -816,8 +801,111 @@
     "                            gp_df.loc[:,(\"id\",\"clinic_name\",\"Latitude\",\"Longitude\",\"geometry\")], \n",
     "                            how=\"left\", max_distance=1, distance_col=\"distance\")\n",
     "\n",
-    "temp_df[\"distance_km\"] = temp_df.apply(lambda x: haversine(x[\"lat\"], x[\"lon\"], x[\"Latitude\"], x[\"Longitude\"]), axis=1)\n",
-    "# temp_df"
+    "temp_df[\"distance_km\"] = temp_df.apply(lambda x: gp.haversine(x[\"lat\"], x[\"lon\"], x[\"Latitude\"], x[\"Longitude\"]), axis=1)\n",
+    "\n",
+    "temp_population = gp.match_nearest(df1 = population, df1_lat = \"lat\", df1_lon=\"lon\",\n",
+    "                                   df2 = gp_df, df2_lat = \"Latitude\", df2_lon=\"Longitude\",\n",
+    "                                   column_to_return = \"id\")\n",
+    "\n",
+    "temp_population.to_parquet(\"data/information/ascii_household_and_gp.parquet\", index=False)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 3,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "temp_df.to_parquet(\"data/information/ascii_houshold_sjoin_gp.parquet\", index=False)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 8,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "df = temp_population.merge(gp_df.loc[:,(\"id\",\"clinic_name\",\"address\",\"Latitude\",\"Longitude\")], how=\"left\", on=\"id\")\n",
+    "df.loc[:,\"distance\"]=df.apply(lambda row:map.haversine(row[\"lat\"], row[\"lon\"], row[\"Latitude\"], row[\"Longitude\"]), axis=1)\n",
+    "df.to_parquet(\"data/information/ascii_household_and_gp.parquet\", index=False)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 14,
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/html": [
+       "<div><style>\n",
+       ".dataframe > thead > tr,\n",
+       ".dataframe > tbody > tr {\n",
+       "  text-align: right;\n",
+       "  white-space: pre-wrap;\n",
+       "}\n",
+       "</style>\n",
+       "<small>shape: (383_775, 19)</small><table border=\"1\" class=\"dataframe\"><thead><tr><th>lon</th><th>lat</th><th>Z</th><th>parlimen</th><th>code_parlimen</th><th>state</th><th>district</th><th>code_state</th><th>code_district</th><th>code_state_district</th><th>parlimen_z</th><th>str_count</th><th>estimated_str</th><th>id</th><th>clinic_name</th><th>address</th><th>Latitude</th><th>Longitude</th><th>distance</th></tr><tr><td>f64</td><td>f64</td><td>f64</td><td>str</td><td>str</td><td>str</td><td>str</td><td>i32</td><td>i32</td><td>str</td><td>f64</td><td>u32</td><td>f64</td><td>i64</td><td>str</td><td>str</td><td>f64</td><td>f64</td><td>f64</td></tr></thead><tbody><tr><td>117.002916</td><td>7.35375</td><td>5.96696</td><td>&quot;P.167 Kudat&quot;</td><td>&quot;P.167&quot;</td><td>&quot;Sabah&quot;</td><td>&quot;Kudat&quot;</td><td>12</td><td>13</td><td>&quot;12_13&quot;</td><td>129387.35254</td><td>31847</td><td>1.468689</td><td>964</td><td>&quot;KLINIK DR ZULFIKAR&quot;</td><td>&quot;LOT 71, GROUND FLOOR, WISMA TE…</td><td>6.1084996</td><td>116.2058</td><td>164.075215</td></tr><tr><td>117.18625</td><td>7.35375</td><td>26.301926</td><td>&quot;P.167 Kudat&quot;</td><td>&quot;P.167&quot;</td><td>&quot;Sabah&quot;</td><td>&quot;Kudat&quot;</td><td>12</td><td>13</td><td>&quot;12_13&quot;</td><td>129387.35254</td><td>31847</td><td>6.473874</td><td>964</td><td>&quot;KLINIK DR ZULFIKAR&quot;</td><td>&quot;LOT 71, GROUND FLOOR, WISMA TE…</td><td>6.1084996</td><td>116.2058</td><td>175.768384</td></tr><tr><td>117.21125</td><td>7.35375</td><td>36.780006</td><td>&quot;P.167 Kudat&quot;</td><td>&quot;P.167&quot;</td><td>&quot;Sabah&quot;</td><td>&quot;Kudat&quot;</td><td>12</td><td>13</td><td>&quot;12_13&quot;</td><td>129387.35254</td><td>31847</td><td>9.052916</td><td>964</td><td>&quot;KLINIK DR ZULFIKAR&quot;</td><td>&quot;LOT 71, GROUND FLOOR, WISMA TE…</td><td>6.1084996</td><td>116.2058</td><td>177.482178</td></tr><tr><td>117.219583</td><td>7.35375</td><td>47.68528</td><td>&quot;P.167 Kudat&quot;</td><td>&quot;P.167&quot;</td><td>&quot;Sabah&quot;</td><td>&quot;Kudat&quot;</td><td>12</td><td>13</td><td>&quot;12_13&quot;</td><td>129387.35254</td><td>31847</td><td>11.737106</td><td>964</td><td>&quot;KLINIK DR ZULFIKAR&quot;</td><td>&quot;LOT 71, GROUND FLOOR, WISMA TE…</td><td>6.1084996</td><td>116.2058</td><td>178.059288</td></tr><tr><td>117.227916</td><td>7.35375</td><td>46.979156</td><td>&quot;P.167 Kudat&quot;</td><td>&quot;P.167&quot;</td><td>&quot;Sabah&quot;</td><td>&quot;Kudat&quot;</td><td>12</td><td>13</td><td>&quot;12_13&quot;</td><td>129387.35254</td><td>31847</td><td>11.563303</td><td>964</td><td>&quot;KLINIK DR ZULFIKAR&quot;</td><td>&quot;LOT 71, GROUND FLOOR, WISMA TE…</td><td>6.1084996</td><td>116.2058</td><td>178.639274</td></tr><tr><td>&hellip;</td><td>&hellip;</td><td>&hellip;</td><td>&hellip;</td><td>&hellip;</td><td>&hellip;</td><td>&hellip;</td><td>&hellip;</td><td>&hellip;</td><td>&hellip;</td><td>&hellip;</td><td>&hellip;</td><td>&hellip;</td><td>&hellip;</td><td>&hellip;</td><td>&hellip;</td><td>&hellip;</td><td>&hellip;</td><td>&hellip;</td></tr><tr><td>110.56125</td><td>0.870417</td><td>20.286165</td><td>&quot;P.199 Serian&quot;</td><td>&quot;P.199&quot;</td><td>&quot;Sarawak&quot;</td><td>&quot;Tebedu&quot;</td><td>13</td><td>32</td><td>&quot;13_32&quot;</td><td>76561.711928</td><td>43064</td><td>11.410448</td><td>911</td><td>&quot;17TH MILES FAMILY CLINIC&quot;</td><td>&quot;GROUND FLOOR, LOT 1629 BLK 5 S…</td><td>1.3364655</td><td>110.407803</td><td>54.557906</td></tr><tr><td>110.569583</td><td>0.870417</td><td>19.441013</td><td>&quot;P.199 Serian&quot;</td><td>&quot;P.199&quot;</td><td>&quot;Sarawak&quot;</td><td>&quot;Tebedu&quot;</td><td>13</td><td>32</td><td>&quot;13_32&quot;</td><td>76561.711928</td><td>43064</td><td>10.935072</td><td>911</td><td>&quot;17TH MILES FAMILY CLINIC&quot;</td><td>&quot;GROUND FLOOR, LOT 1629 BLK 5 S…</td><td>1.3364655</td><td>110.407803</td><td>54.85465</td></tr><tr><td>110.577916</td><td>0.870417</td><td>22.962774</td><td>&quot;P.199 Serian&quot;</td><td>&quot;P.199&quot;</td><td>&quot;Sarawak&quot;</td><td>&quot;Tebedu&quot;</td><td>13</td><td>32</td><td>&quot;13_32&quot;</td><td>76561.711928</td><td>43064</td><td>12.915972</td><td>911</td><td>&quot;17TH MILES FAMILY CLINIC&quot;</td><td>&quot;GROUND FLOOR, LOT 1629 BLK 5 S…</td><td>1.3364655</td><td>110.407803</td><td>55.165358</td></tr><tr><td>110.58625</td><td>0.870417</td><td>25.920992</td><td>&quot;P.199 Serian&quot;</td><td>&quot;P.199&quot;</td><td>&quot;Sarawak&quot;</td><td>&quot;Tebedu&quot;</td><td>13</td><td>32</td><td>&quot;13_32&quot;</td><td>76561.711928</td><td>43064</td><td>14.579893</td><td>911</td><td>&quot;17TH MILES FAMILY CLINIC&quot;</td><td>&quot;GROUND FLOOR, LOT 1629 BLK 5 S…</td><td>1.3364655</td><td>110.407803</td><td>55.489796</td></tr><tr><td>110.569583</td><td>0.862084</td><td>18.544966</td><td>&quot;P.199 Serian&quot;</td><td>&quot;P.199&quot;</td><td>&quot;Sarawak&quot;</td><td>&quot;Tebedu&quot;</td><td>13</td><td>32</td><td>&quot;13_32&quot;</td><td>76561.711928</td><td>43064</td><td>10.431068</td><td>911</td><td>&quot;17TH MILES FAMILY CLINIC&quot;</td><td>&quot;GROUND FLOOR, LOT 1629 BLK 5 S…</td><td>1.3364655</td><td>110.407803</td><td>55.730885</td></tr></tbody></table></div>"
+      ],
+      "text/plain": [
+       "shape: (383_775, 19)\n",
+       "┌───────────┬──────────┬───────────┬───────────┬───┬───────────┬───────────┬───────────┬───────────┐\n",
+       "│ lon       ┆ lat      ┆ Z         ┆ parlimen  ┆ … ┆ address   ┆ Latitude  ┆ Longitude ┆ distance  │\n",
+       "│ ---       ┆ ---      ┆ ---       ┆ ---       ┆   ┆ ---       ┆ ---       ┆ ---       ┆ ---       │\n",
+       "│ f64       ┆ f64      ┆ f64       ┆ str       ┆   ┆ str       ┆ f64       ┆ f64       ┆ f64       │\n",
+       "╞═══════════╪══════════╪═══════════╪═══════════╪═══╪═══════════╪═══════════╪═══════════╪═══════════╡\n",
+       "│ 117.00291 ┆ 7.35375  ┆ 5.96696   ┆ P.167     ┆ … ┆ LOT 71,   ┆ 6.1084996 ┆ 116.2058  ┆ 164.07521 │\n",
+       "│ 6         ┆          ┆           ┆ Kudat     ┆   ┆ GROUND    ┆           ┆           ┆ 5         │\n",
+       "│           ┆          ┆           ┆           ┆   ┆ FLOOR,    ┆           ┆           ┆           │\n",
+       "│           ┆          ┆           ┆           ┆   ┆ WISMA TE… ┆           ┆           ┆           │\n",
+       "│ 117.18625 ┆ 7.35375  ┆ 26.301926 ┆ P.167     ┆ … ┆ LOT 71,   ┆ 6.1084996 ┆ 116.2058  ┆ 175.76838 │\n",
+       "│           ┆          ┆           ┆ Kudat     ┆   ┆ GROUND    ┆           ┆           ┆ 4         │\n",
+       "│           ┆          ┆           ┆           ┆   ┆ FLOOR,    ┆           ┆           ┆           │\n",
+       "│           ┆          ┆           ┆           ┆   ┆ WISMA TE… ┆           ┆           ┆           │\n",
+       "│ 117.21125 ┆ 7.35375  ┆ 36.780006 ┆ P.167     ┆ … ┆ LOT 71,   ┆ 6.1084996 ┆ 116.2058  ┆ 177.48217 │\n",
+       "│           ┆          ┆           ┆ Kudat     ┆   ┆ GROUND    ┆           ┆           ┆ 8         │\n",
+       "│           ┆          ┆           ┆           ┆   ┆ FLOOR,    ┆           ┆           ┆           │\n",
+       "│           ┆          ┆           ┆           ┆   ┆ WISMA TE… ┆           ┆           ┆           │\n",
+       "│ 117.21958 ┆ 7.35375  ┆ 47.68528  ┆ P.167     ┆ … ┆ LOT 71,   ┆ 6.1084996 ┆ 116.2058  ┆ 178.05928 │\n",
+       "│ 3         ┆          ┆           ┆ Kudat     ┆   ┆ GROUND    ┆           ┆           ┆ 8         │\n",
+       "│           ┆          ┆           ┆           ┆   ┆ FLOOR,    ┆           ┆           ┆           │\n",
+       "│           ┆          ┆           ┆           ┆   ┆ WISMA TE… ┆           ┆           ┆           │\n",
+       "│ 117.22791 ┆ 7.35375  ┆ 46.979156 ┆ P.167     ┆ … ┆ LOT 71,   ┆ 6.1084996 ┆ 116.2058  ┆ 178.63927 │\n",
+       "│ 6         ┆          ┆           ┆ Kudat     ┆   ┆ GROUND    ┆           ┆           ┆ 4         │\n",
+       "│           ┆          ┆           ┆           ┆   ┆ FLOOR,    ┆           ┆           ┆           │\n",
+       "│           ┆          ┆           ┆           ┆   ┆ WISMA TE… ┆           ┆           ┆           │\n",
+       "│ …         ┆ …        ┆ …         ┆ …         ┆ … ┆ …         ┆ …         ┆ …         ┆ …         │\n",
+       "│ 110.56125 ┆ 0.870417 ┆ 20.286165 ┆ P.199     ┆ … ┆ GROUND    ┆ 1.3364655 ┆ 110.40780 ┆ 54.557906 │\n",
+       "│           ┆          ┆           ┆ Serian    ┆   ┆ FLOOR,    ┆           ┆ 3         ┆           │\n",
+       "│           ┆          ┆           ┆           ┆   ┆ LOT 1629  ┆           ┆           ┆           │\n",
+       "│           ┆          ┆           ┆           ┆   ┆ BLK 5 S…  ┆           ┆           ┆           │\n",
+       "│ 110.56958 ┆ 0.870417 ┆ 19.441013 ┆ P.199     ┆ … ┆ GROUND    ┆ 1.3364655 ┆ 110.40780 ┆ 54.85465  │\n",
+       "│ 3         ┆          ┆           ┆ Serian    ┆   ┆ FLOOR,    ┆           ┆ 3         ┆           │\n",
+       "│           ┆          ┆           ┆           ┆   ┆ LOT 1629  ┆           ┆           ┆           │\n",
+       "│           ┆          ┆           ┆           ┆   ┆ BLK 5 S…  ┆           ┆           ┆           │\n",
+       "│ 110.57791 ┆ 0.870417 ┆ 22.962774 ┆ P.199     ┆ … ┆ GROUND    ┆ 1.3364655 ┆ 110.40780 ┆ 55.165358 │\n",
+       "│ 6         ┆          ┆           ┆ Serian    ┆   ┆ FLOOR,    ┆           ┆ 3         ┆           │\n",
+       "│           ┆          ┆           ┆           ┆   ┆ LOT 1629  ┆           ┆           ┆           │\n",
+       "│           ┆          ┆           ┆           ┆   ┆ BLK 5 S…  ┆           ┆           ┆           │\n",
+       "│ 110.58625 ┆ 0.870417 ┆ 25.920992 ┆ P.199     ┆ … ┆ GROUND    ┆ 1.3364655 ┆ 110.40780 ┆ 55.489796 │\n",
+       "│           ┆          ┆           ┆ Serian    ┆   ┆ FLOOR,    ┆           ┆ 3         ┆           │\n",
+       "│           ┆          ┆           ┆           ┆   ┆ LOT 1629  ┆           ┆           ┆           │\n",
+       "│           ┆          ┆           ┆           ┆   ┆ BLK 5 S…  ┆           ┆           ┆           │\n",
+       "│ 110.56958 ┆ 0.862084 ┆ 18.544966 ┆ P.199     ┆ … ┆ GROUND    ┆ 1.3364655 ┆ 110.40780 ┆ 55.730885 │\n",
+       "│ 3         ┆          ┆           ┆ Serian    ┆   ┆ FLOOR,    ┆           ┆ 3         ┆           │\n",
+       "│           ┆          ┆           ┆           ┆   ┆ LOT 1629  ┆           ┆           ┆           │\n",
+       "│           ┆          ┆           ┆           ┆   ┆ BLK 5 S…  ┆           ┆           ┆           │\n",
+       "└───────────┴──────────┴───────────┴───────────┴───┴───────────┴───────────┴───────────┴───────────┘"
+      ]
+     },
+     "execution_count": 14,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "pl.read_parquet(\"data/information/ascii_household_and_gp.parquet\")\n",
+    "# pl.from_pandas(df.drop(columns=\"geometry\")).write_parquet(\"data/information/ascii_household_and_gp.parquet\", use_pyarrow=True)"
    ]
   },
   {
