--- a/clean_spm.ipynb
+++ b/clean_spm.ipynb
@@ -791,219 +791,83 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 18,
+   "execution_count": 35,
    "metadata": {},
    "outputs": [
     {
      "name": "stderr",
      "output_type": "stream",
      "text": [
-      "/var/folders/kx/mhdv49d913j0rf2b8xmgtmhw0000gn/T/ipykernel_2619/1845821372.py:1: FutureWarning:\n",
+      "/var/folders/kx/mhdv49d913j0rf2b8xmgtmhw0000gn/T/ipykernel_2619/2686761353.py:9: FutureWarning:\n",
       "\n",
       "The provided callable <function mean at 0x1049ba980> is currently using DataFrameGroupBy.mean. In a future version of pandas, the provided callable will be used directly. To keep current behavior pass the string \"mean\" instead.\n",
       "\n",
-      "/var/folders/kx/mhdv49d913j0rf2b8xmgtmhw0000gn/T/ipykernel_2619/1845821372.py:1: FutureWarning:\n",
+      "/var/folders/kx/mhdv49d913j0rf2b8xmgtmhw0000gn/T/ipykernel_2619/2686761353.py:9: FutureWarning:\n",
       "\n",
       "The provided callable <function std at 0x1049baac0> is currently using DataFrameGroupBy.std. In a future version of pandas, the provided callable will be used directly. To keep current behavior pass the string \"std\" instead.\n",
       "\n",
-      "/var/folders/kx/mhdv49d913j0rf2b8xmgtmhw0000gn/T/ipykernel_2619/1845821372.py:1: FutureWarning:\n",
+      "/var/folders/kx/mhdv49d913j0rf2b8xmgtmhw0000gn/T/ipykernel_2619/2686761353.py:9: FutureWarning:\n",
       "\n",
       "The provided callable <built-in function min> is currently using DataFrameGroupBy.min. In a future version of pandas, the provided callable will be used directly. To keep current behavior pass the string \"min\" instead.\n",
       "\n",
-      "/var/folders/kx/mhdv49d913j0rf2b8xmgtmhw0000gn/T/ipykernel_2619/1845821372.py:1: FutureWarning:\n",
+      "/var/folders/kx/mhdv49d913j0rf2b8xmgtmhw0000gn/T/ipykernel_2619/2686761353.py:9: FutureWarning:\n",
       "\n",
       "The provided callable <built-in function max> is currently using DataFrameGroupBy.max. In a future version of pandas, the provided callable will be used directly. To keep current behavior pass the string \"max\" instead.\n",
       "\n",
-      "/var/folders/kx/mhdv49d913j0rf2b8xmgtmhw0000gn/T/ipykernel_2619/1845821372.py:1: FutureWarning:\n",
+      "/var/folders/kx/mhdv49d913j0rf2b8xmgtmhw0000gn/T/ipykernel_2619/2686761353.py:9: FutureWarning:\n",
       "\n",
       "The provided callable <function median at 0x104b1b740> is currently using DataFrameGroupBy.median. In a future version of pandas, the provided callable will be used directly. To keep current behavior pass the string \"median\" instead.\n",
       "\n"
      ]
     },
     {
-     "data": {
-      "text/html": [
-       "<div>\n",
-       "<style scoped>\n",
-       "    .dataframe tbody tr th:only-of-type {\n",
-       "        vertical-align: middle;\n",
-       "    }\n",
-       "\n",
-       "    .dataframe tbody tr th {\n",
-       "        vertical-align: top;\n",
-       "    }\n",
-       "\n",
-       "    .dataframe thead tr th {\n",
-       "        text-align: left;\n",
-       "    }\n",
-       "\n",
-       "    .dataframe thead tr:last-of-type th {\n",
-       "        text-align: right;\n",
-       "    }\n",
-       "</style>\n",
-       "<table border=\"1\" class=\"dataframe\">\n",
-       "  <thead>\n",
-       "    <tr>\n",
-       "      <th></th>\n",
-       "      <th>mean</th>\n",
-       "      <th>std</th>\n",
-       "      <th>min</th>\n",
-       "      <th>max</th>\n",
-       "      <th>median</th>\n",
-       "      <th>iqr</th>\n",
-       "    </tr>\n",
-       "    <tr>\n",
-       "      <th></th>\n",
-       "      <th>distance</th>\n",
-       "      <th>distance</th>\n",
-       "      <th>distance</th>\n",
-       "      <th>distance</th>\n",
-       "      <th>distance</th>\n",
-       "      <th>distance</th>\n",
-       "    </tr>\n",
-       "    <tr>\n",
-       "      <th>district</th>\n",
-       "      <th></th>\n",
-       "      <th></th>\n",
-       "      <th></th>\n",
-       "      <th></th>\n",
-       "      <th></th>\n",
-       "      <th></th>\n",
-       "    </tr>\n",
-       "  </thead>\n",
-       "  <tbody>\n",
-       "    <tr>\n",
-       "      <th>Gombak</th>\n",
-       "      <td>4.440584</td>\n",
-       "      <td>3.606451</td>\n",
-       "      <td>0.007844</td>\n",
-       "      <td>14.894828</td>\n",
-       "      <td>3.337327</td>\n",
-       "      <td>4.937731</td>\n",
-       "    </tr>\n",
-       "    <tr>\n",
-       "      <th>Johor Bahru</th>\n",
-       "      <td>3.634853</td>\n",
-       "      <td>3.347368</td>\n",
-       "      <td>0.027453</td>\n",
-       "      <td>16.032705</td>\n",
-       "      <td>2.349377</td>\n",
-       "      <td>4.219763</td>\n",
-       "    </tr>\n",
-       "    <tr>\n",
-       "      <th>Kinta</th>\n",
-       "      <td>7.358301</td>\n",
-       "      <td>6.557695</td>\n",
-       "      <td>0.053119</td>\n",
-       "      <td>24.737210</td>\n",
-       "      <td>4.852479</td>\n",
-       "      <td>9.592342</td>\n",
-       "    </tr>\n",
-       "    <tr>\n",
-       "      <th>Klang</th>\n",
-       "      <td>3.537567</td>\n",
-       "      <td>3.720585</td>\n",
-       "      <td>0.037973</td>\n",
-       "      <td>14.996997</td>\n",
-       "      <td>1.903555</td>\n",
-       "      <td>4.121292</td>\n",
-       "    </tr>\n",
-       "    <tr>\n",
-       "      <th>Kota Kinabalu</th>\n",
-       "      <td>4.419318</td>\n",
-       "      <td>3.783152</td>\n",
-       "      <td>0.073595</td>\n",
-       "      <td>18.398427</td>\n",
-       "      <td>3.181167</td>\n",
-       "      <td>5.429778</td>\n",
-       "    </tr>\n",
-       "    <tr>\n",
-       "      <th>Kuching</th>\n",
-       "      <td>10.259260</td>\n",
-       "      <td>7.406708</td>\n",
-       "      <td>0.072929</td>\n",
-       "      <td>34.587486</td>\n",
-       "      <td>8.741427</td>\n",
-       "      <td>10.417349</td>\n",
-       "    </tr>\n",
-       "    <tr>\n",
-       "      <th>Petaling</th>\n",
-       "      <td>0.906497</td>\n",
-       "      <td>0.570048</td>\n",
-       "      <td>0.041307</td>\n",
-       "      <td>3.882908</td>\n",
-       "      <td>0.796657</td>\n",
-       "      <td>0.728455</td>\n",
-       "    </tr>\n",
-       "    <tr>\n",
-       "      <th>Timur Laut</th>\n",
-       "      <td>1.858716</td>\n",
-       "      <td>1.204165</td>\n",
-       "      <td>0.066443</td>\n",
-       "      <td>4.654511</td>\n",
-       "      <td>1.736024</td>\n",
-       "      <td>1.968279</td>\n",
-       "    </tr>\n",
-       "    <tr>\n",
-       "      <th>Ulu Langat</th>\n",
-       "      <td>5.716903</td>\n",
-       "      <td>5.115344</td>\n",
-       "      <td>0.052333</td>\n",
-       "      <td>18.704206</td>\n",
-       "      <td>4.093679</td>\n",
-       "      <td>8.314443</td>\n",
-       "    </tr>\n",
-       "    <tr>\n",
-       "      <th>W.P. Kuala Lumpur</th>\n",
-       "      <td>0.710739</td>\n",
-       "      <td>0.421291</td>\n",
-       "      <td>0.035236</td>\n",
-       "      <td>2.425707</td>\n",
-       "      <td>0.660009</td>\n",
-       "      <td>0.583882</td>\n",
-       "    </tr>\n",
-       "  </tbody>\n",
-       "</table>\n",
-       "</div>"
-      ],
-      "text/plain": [
-       "                        mean       std       min        max    median  \\\n",
-       "                    distance  distance  distance   distance  distance   \n",
-       "district                                                                \n",
-       "Gombak              4.440584  3.606451  0.007844  14.894828  3.337327   \n",
-       "Johor Bahru         3.634853  3.347368  0.027453  16.032705  2.349377   \n",
-       "Kinta               7.358301  6.557695  0.053119  24.737210  4.852479   \n",
-       "Klang               3.537567  3.720585  0.037973  14.996997  1.903555   \n",
-       "Kota Kinabalu       4.419318  3.783152  0.073595  18.398427  3.181167   \n",
-       "Kuching            10.259260  7.406708  0.072929  34.587486  8.741427   \n",
-       "Petaling            0.906497  0.570048  0.041307   3.882908  0.796657   \n",
-       "Timur Laut          1.858716  1.204165  0.066443   4.654511  1.736024   \n",
-       "Ulu Langat          5.716903  5.115344  0.052333  18.704206  4.093679   \n",
-       "W.P. Kuala Lumpur   0.710739  0.421291  0.035236   2.425707  0.660009   \n",
-       "\n",
-       "                         iqr  \n",
-       "                    distance  \n",
-       "district                      \n",
-       "Gombak              4.937731  \n",
-       "Johor Bahru         4.219763  \n",
-       "Kinta               9.592342  \n",
-       "Klang               4.121292  \n",
-       "Kota Kinabalu       5.429778  \n",
-       "Kuching            10.417349  \n",
-       "Petaling            0.728455  \n",
-       "Timur Laut          1.968279  \n",
-       "Ulu Langat          8.314443  \n",
-       "W.P. Kuala Lumpur   0.583882  "
-      ]
-     },
-     "execution_count": 18,
-     "metadata": {},
-     "output_type": "execute_result"
+     "ename": "KeyError",
+     "evalue": "'shapiro_stat'",
+     "output_type": "error",
+     "traceback": [
+      "\u001b[0;31m---------------------------------------------------------------------------\u001b[0m",
+      "\u001b[0;31mKeyError\u001b[0m                                  Traceback (most recent call last)",
+      "File \u001b[0;32m~/Downloads/github/.venv/lib/python3.12/site-packages/pandas/core/indexes/base.py:3805\u001b[0m, in \u001b[0;36mIndex.get_loc\u001b[0;34m(self, key)\u001b[0m\n\u001b[1;32m   3804\u001b[0m \u001b[38;5;28;01mtry\u001b[39;00m:\n\u001b[0;32m-> 3805\u001b[0m     \u001b[38;5;28;01mreturn\u001b[39;00m \u001b[38;5;28;43mself\u001b[39;49m\u001b[38;5;241;43m.\u001b[39;49m\u001b[43m_engine\u001b[49m\u001b[38;5;241;43m.\u001b[39;49m\u001b[43mget_loc\u001b[49m\u001b[43m(\u001b[49m\u001b[43mcasted_key\u001b[49m\u001b[43m)\u001b[49m\n\u001b[1;32m   3806\u001b[0m \u001b[38;5;28;01mexcept\u001b[39;00m \u001b[38;5;167;01mKeyError\u001b[39;00m \u001b[38;5;28;01mas\u001b[39;00m err:\n",
+      "File \u001b[0;32mindex.pyx:167\u001b[0m, in \u001b[0;36mpandas._libs.index.IndexEngine.get_loc\u001b[0;34m()\u001b[0m\n",
+      "File \u001b[0;32mindex.pyx:196\u001b[0m, in \u001b[0;36mpandas._libs.index.IndexEngine.get_loc\u001b[0;34m()\u001b[0m\n",
+      "File \u001b[0;32mpandas/_libs/hashtable_class_helper.pxi:7081\u001b[0m, in \u001b[0;36mpandas._libs.hashtable.PyObjectHashTable.get_item\u001b[0;34m()\u001b[0m\n",
+      "File \u001b[0;32mpandas/_libs/hashtable_class_helper.pxi:7089\u001b[0m, in \u001b[0;36mpandas._libs.hashtable.PyObjectHashTable.get_item\u001b[0;34m()\u001b[0m\n",
+      "\u001b[0;31mKeyError\u001b[0m: 'shapiro_stat'",
+      "\nThe above exception was the direct cause of the following exception:\n",
+      "\u001b[0;31mKeyError\u001b[0m                                  Traceback (most recent call last)",
+      "Cell \u001b[0;32mIn[35], line 22\u001b[0m\n\u001b[1;32m     17\u001b[0m pivot_table\u001b[38;5;241m.\u001b[39mcolumns \u001b[38;5;241m=\u001b[39m [\u001b[38;5;124m\"\u001b[39m\u001b[38;5;124mdistrict\u001b[39m\u001b[38;5;124m\"\u001b[39m, \u001b[38;5;124m\"\u001b[39m\u001b[38;5;124mmean\u001b[39m\u001b[38;5;124m\"\u001b[39m, \u001b[38;5;124m\"\u001b[39m\u001b[38;5;124mstandard deviation\u001b[39m\u001b[38;5;124m\"\u001b[39m, \u001b[38;5;124m\"\u001b[39m\u001b[38;5;124mmin\u001b[39m\u001b[38;5;124m\"\u001b[39m, \u001b[38;5;124m\"\u001b[39m\u001b[38;5;124mmax\u001b[39m\u001b[38;5;124m\"\u001b[39m, \u001b[38;5;124m\"\u001b[39m\u001b[38;5;124mmedian\u001b[39m\u001b[38;5;124m\"\u001b[39m, \u001b[38;5;124m\"\u001b[39m\u001b[38;5;124miqr\u001b[39m\u001b[38;5;124m\"\u001b[39m, \u001b[38;5;124m\"\u001b[39m\u001b[38;5;124mskew\u001b[39m\u001b[38;5;124m\"\u001b[39m, \u001b[38;5;124m\"\u001b[39m\u001b[38;5;124mkurtosis\u001b[39m\u001b[38;5;124m\"\u001b[39m, \u001b[38;5;124m\"\u001b[39m\u001b[38;5;124mshapiro\u001b[39m\u001b[38;5;124m\"\u001b[39m]\n\u001b[1;32m     19\u001b[0m \u001b[38;5;66;03m# Separate the Shapiro-Wilk test results into two columns\u001b[39;00m\n\u001b[1;32m     20\u001b[0m \u001b[38;5;66;03m# pivot_table[['shapiro_stat', 'shapiro_p']] = pd.DataFrame(pivot_table['shapiro'].tolist(), index=pivot_table.index)\u001b[39;00m\n\u001b[0;32m---> 22\u001b[0m pivot_table[\u001b[38;5;124m\"\u001b[39m\u001b[38;5;124mshapiro_stat\u001b[39m\u001b[38;5;124m\"\u001b[39m] \u001b[38;5;241m=\u001b[39m \u001b[43mpivot_table\u001b[49m\u001b[43m[\u001b[49m\u001b[38;5;124;43m\"\u001b[39;49m\u001b[38;5;124;43mshapiro_stat\u001b[39;49m\u001b[38;5;124;43m\"\u001b[39;49m\u001b[43m]\u001b[49m[\u001b[38;5;241m0\u001b[39m]\n\u001b[1;32m     23\u001b[0m \u001b[38;5;66;03m# # Drop the original shapiro_test column\u001b[39;00m\n\u001b[1;32m     24\u001b[0m \u001b[38;5;66;03m# pivot_table = pivot_table.drop(columns=['shapiro'])\u001b[39;00m\n\u001b[1;32m     26\u001b[0m pivot_table\n",
+      "File \u001b[0;32m~/Downloads/github/.venv/lib/python3.12/site-packages/pandas/core/frame.py:4102\u001b[0m, in \u001b[0;36mDataFrame.__getitem__\u001b[0;34m(self, key)\u001b[0m\n\u001b[1;32m   4100\u001b[0m \u001b[38;5;28;01mif\u001b[39;00m \u001b[38;5;28mself\u001b[39m\u001b[38;5;241m.\u001b[39mcolumns\u001b[38;5;241m.\u001b[39mnlevels \u001b[38;5;241m>\u001b[39m \u001b[38;5;241m1\u001b[39m:\n\u001b[1;32m   4101\u001b[0m     \u001b[38;5;28;01mreturn\u001b[39;00m \u001b[38;5;28mself\u001b[39m\u001b[38;5;241m.\u001b[39m_getitem_multilevel(key)\n\u001b[0;32m-> 4102\u001b[0m indexer \u001b[38;5;241m=\u001b[39m \u001b[38;5;28;43mself\u001b[39;49m\u001b[38;5;241;43m.\u001b[39;49m\u001b[43mcolumns\u001b[49m\u001b[38;5;241;43m.\u001b[39;49m\u001b[43mget_loc\u001b[49m\u001b[43m(\u001b[49m\u001b[43mkey\u001b[49m\u001b[43m)\u001b[49m\n\u001b[1;32m   4103\u001b[0m \u001b[38;5;28;01mif\u001b[39;00m is_integer(indexer):\n\u001b[1;32m   4104\u001b[0m     indexer \u001b[38;5;241m=\u001b[39m [indexer]\n",
+      "File \u001b[0;32m~/Downloads/github/.venv/lib/python3.12/site-packages/pandas/core/indexes/base.py:3812\u001b[0m, in \u001b[0;36mIndex.get_loc\u001b[0;34m(self, key)\u001b[0m\n\u001b[1;32m   3807\u001b[0m     \u001b[38;5;28;01mif\u001b[39;00m \u001b[38;5;28misinstance\u001b[39m(casted_key, \u001b[38;5;28mslice\u001b[39m) \u001b[38;5;129;01mor\u001b[39;00m (\n\u001b[1;32m   3808\u001b[0m         \u001b[38;5;28misinstance\u001b[39m(casted_key, abc\u001b[38;5;241m.\u001b[39mIterable)\n\u001b[1;32m   3809\u001b[0m         \u001b[38;5;129;01mand\u001b[39;00m \u001b[38;5;28many\u001b[39m(\u001b[38;5;28misinstance\u001b[39m(x, \u001b[38;5;28mslice\u001b[39m) \u001b[38;5;28;01mfor\u001b[39;00m x \u001b[38;5;129;01min\u001b[39;00m casted_key)\n\u001b[1;32m   3810\u001b[0m     ):\n\u001b[1;32m   3811\u001b[0m         \u001b[38;5;28;01mraise\u001b[39;00m InvalidIndexError(key)\n\u001b[0;32m-> 3812\u001b[0m     \u001b[38;5;28;01mraise\u001b[39;00m \u001b[38;5;167;01mKeyError\u001b[39;00m(key) \u001b[38;5;28;01mfrom\u001b[39;00m \u001b[38;5;21;01merr\u001b[39;00m\n\u001b[1;32m   3813\u001b[0m \u001b[38;5;28;01mexcept\u001b[39;00m \u001b[38;5;167;01mTypeError\u001b[39;00m:\n\u001b[1;32m   3814\u001b[0m     \u001b[38;5;66;03m# If we have a listlike key, _check_indexing_error will raise\u001b[39;00m\n\u001b[1;32m   3815\u001b[0m     \u001b[38;5;66;03m#  InvalidIndexError. Otherwise we fall through and re-raise\u001b[39;00m\n\u001b[1;32m   3816\u001b[0m     \u001b[38;5;66;03m#  the TypeError.\u001b[39;00m\n\u001b[1;32m   3817\u001b[0m     \u001b[38;5;28mself\u001b[39m\u001b[38;5;241m.\u001b[39m_check_indexing_error(key)\n",
+      "\u001b[0;31mKeyError\u001b[0m: 'shapiro_stat'"
+     ]
     }
    ],
    "source": [
-    "target_population.pivot_table(index=\"district\", values=\"distance\", \n",
-    "                              aggfunc=[np.mean, np.std, min, max, np.median, iqr, skew, kurtosis, shapiro])"
+    "# for formula in [np.mean, np.std, min, max, np.median, iqr, skew, kurtosis, shapiro]:\n",
+    "    \n",
+    "# Define a custom aggregation function for the Shapiro-Wilk test\n",
+    "def shapiro_test(x):\n",
+    "    stat, p = shapiro(x)\n",
+    "    return (stat, p)\n",
+    "\n",
+    "# Perform pivot table operation\n",
+    "pivot_table = target_population.pivot_table(\n",
+    "    index=\"district\", \n",
+    "    values=\"distance\", \n",
+    "    aggfunc=[np.mean, np.std, min, max, np.median, iqr, skew, kurtosis, shapiro]\n",
+    ").reset_index()\n",
+    "\n",
+    "# Flatten the MultiIndex columns\n",
+    "# pivot_table.columns = ['_'.join(col).strip() if isinstance(col, tuple) else col for col in pivot_table.columns]\n",
+    "pivot_table.columns = [\"district\", \"mean\", \"standard deviation\", \"min\", \"max\", \"median\", \"iqr\", \"skew\", \"kurtosis\", \"shapiro\"]\n",
+    "\n",
+    "# Separate the Shapiro-Wilk test results into two columns\n",
+    "# pivot_table[['shapiro_stat', 'shapiro_p']] = pd.DataFrame(pivot_table['shapiro'].tolist(), index=pivot_table.index)\n",
+    "\n",
+    "# # Drop the original shapiro_test column\n",
+    "# pivot_table = pivot_table.drop(columns=['shapiro'])\n",
+    "\n",
+    "pivot_table"
    ]
   },
   {
